# libgnome-gcc-introspector

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libgccintrospector-0.1.pc  libgccintrospector-0.1.pc.in  libgccintrospector-gnome-0.1.pc.in  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
libgccintrospector/: Gccintrospector-0.1.gir  GccintrospectorGNOME-0.1.gir  Makefile  Makefile.am  Makefile.in  gccintrospector-enum-types.c  gccintrospector-enum-types.c.tmpl  gccintrospector-enum-types.h  gccintrospector-enum-types.h.tmpl
libgccintrospector/.deps/: gccintrospector-enum-types.Plo  gccintrospector-gnome-features.Plo  gccintrospector-marshal.Plo  gccintrospector-test.Plo
